--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         </div>
         <!--icon -->
 
-        <div>
+        <div class="footer-group">
           <p class="footer-text">приєднуйтесь</p>
           <ul class="footer-soc list">
             <li>
@@ -440,6 +440,20 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-text">Підпишіться на розсилку</p>
+          <form class="footer-form-group">
+            <label for="">
+              <input type="email" name="mail" id="mail" placeholder="E-mail">              
+            </label>
+            <button class="footer-form-btn" type="submit"><svg class="footer-form-icon" 
+              width="24px" height="24px">
+              <use href="./images/icons.svg#iconsend"></use>
+            </svg> Підписатися</button>
+          </form>
+
+
+        </div>
       </div>
     </footer>
 
@@ -452,6 +466,80 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
+        <strong>Залиште свої дані, ми вам передзвонимо</strong>
+        <!-- <form class="modal-form" name="modal-form">
+
+          <label class="modal-form-group">
+            <span class="modal-form-label">Ім'я</span>
+            <input class="modal-form-field" type="text" placeholder="jonn dou">
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href=""></use>
+            </svg>
+          </label>
+
+            <label class="modal-form-group">
+            <span class="modal-form-label">Телефон</span>
+            <input class="modal-form-field" type="text">
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href=""></use>
+            </svg>
+          </label>
+
+            <label class="modal-form-group">
+            <span class="modal-form-label">Пошта</span>
+            <input class="modal-form-field" type="text">
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href=""></use>
+            </svg>
+          </label> -->
+          <form class="modal-form" name="modal-form">
+            <div class="modal-form-all" role="group">
+              <label class="modal-form-label" for="user_name">Ім'я</label>
+              <div class="modal-form-wrapper">
+                <input class="modal-form-field" type="text" name="user_name" id="user_name">
+                <svg class="modal-form-icon" width="18" height="18">
+                  <use href="./images/icons.svg"#></use>
+                </svg>
+              </div>
+
+               <label class="modal-form-label" for="user_ phone">Телефон</label>
+              <div class="modal-form-wrapper">
+                <input class="modal-form-field" type="tel" name="user_phone" id="user_ phone">
+                <svg class="modal-form-icon" width="18" height="18">
+                  <use href="./images/icons.svg"#></use>
+                </svg>
+              </div>
+
+               <label class="modal-form-label" for="user_mail">Пошта</label>
+              <div class="modal-form-wrapper">
+                <input class="modal-form-field" type="mail" name="user_mail" id="user_mail">
+                <svg class="modal-form-icon" width="18" height="18">
+                  <use href="./images/icons.svg"#></use>
+                </svg>
+              </div>
+              <label class="modal-form-label" for="user_message">Коментар</label>
+              <textarea class="modal-form-message" 
+              name="user_message" 
+              id="user_message"               
+              rows="6">
+            </textarea>
+            </div>
+            <div class="modal-form-group" role="group">
+              <input class="modal-form-checkbox" type="checkbox" name="" id="user_agreement">
+              <label for="user_agreement">Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a> </label>
+            </div>
+            <button class="modal-form-btn" type="submit">Відправити</button>
+
+
+
+
+
+
+          </form>
+
+
+
+        </form>
       </div>
     </div>
     <!-- skript -->
