--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li class="header-item"
               ><a class="header-list link" href="./portfolio.html">Портфоліо</a></li
             >
-            <li class="header-item"> <a class="header-list link" href="#">Контакти</a></li>
+            <li class="header-item"><a class="header-list link" href="#">Контакти</a></li>
           </ul>
         </nav>
 
@@ -443,16 +443,16 @@
         <div class="footer-form">
           <p class="footer-text">Підпишіться на розсилку</p>
           <form class="footer-form-group">
-            <label for="">
-              <input type="email" name="mail" id="mail" placeholder="E-mail">              
+            <label class="footer-label" for="mail">
+              <input class="footer-field" type="email" name="mail" id="mail" placeholder="E-mail" />
             </label>
-            <button class="footer-form-btn" type="submit"><svg class="footer-form-icon" 
-              width="24px" height="24px">
-              <use href="./images/icons.svg#iconsend"></use>
-            </svg> Підписатися</button>
+            <button class="footer-form-btn" type="submit"
+              ><svg class="footer-form-icon" width="24px" height="24px">
+                <use href="./images/icons.svg#iconsend"></use>
+              </svg>
+              Підписатися</button
+            >
           </form>
-
-
         </div>
       </div>
     </footer>
@@ -466,79 +466,77 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
-        <strong>Залиште свої дані, ми вам передзвонимо</strong>
-        <!-- <form class="modal-form" name="modal-form">
+        <strong class="modal-label-text">Залиште свої дані, ми вам передзвонимо</strong>
 
-          <label class="modal-form-group">
-            <span class="modal-form-label">Ім'я</span>
-            <input class="modal-form-field" type="text" placeholder="jonn dou">
-            <svg class="modal-form-icon" width="18" height="18">
-              <use href=""></use>
-            </svg>
-          </label>
+        <form class="modal-form" name="modal-form">
+          <div class="modal-form-all" role="group">
+            <label class="modal-form-label" for="user_name">Ім'я</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-field"
+                type="text"
+                name="user_name"
+                id="user_name"
+                placeholder="john dou"
+                required
+                minlength="3"
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#person-black"></use>
+              </svg>
+            </div>
 
-            <label class="modal-form-group">
-            <span class="modal-form-label">Телефон</span>
-            <input class="modal-form-field" type="text">
-            <svg class="modal-form-icon" width="18" height="18">
-              <use href=""></use>
-            </svg>
-          </label>
+            <label class="modal-form-label" for="user_phone">Телефон</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-field"
+                type="tel"
+                name="user_phone"
+                id="user_phone"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#phoneblack"></use>
+              </svg>
+            </div>
 
-            <label class="modal-form-group">
-            <span class="modal-form-label">Пошта</span>
-            <input class="modal-form-field" type="text">
-            <svg class="modal-form-icon" width="18" height="18">
-              <use href=""></use>
-            </svg>
-          </label> -->
-          <form class="modal-form" name="modal-form">
-            <div class="modal-form-all" role="group">
-              <label class="modal-form-label" for="user_name">Ім'я</label>
-              <div class="modal-form-wrapper">
-                <input class="modal-form-field" type="text" name="user_name" id="user_name">
-                <svg class="modal-form-icon" width="18" height="18">
-                  <use href="./images/icons.svg"#></use>
-                </svg>
-              </div>
-
-               <label class="modal-form-label" for="user_ phone">Телефон</label>
-              <div class="modal-form-wrapper">
-                <input class="modal-form-field" type="tel" name="user_phone" id="user_ phone">
-                <svg class="modal-form-icon" width="18" height="18">
-                  <use href="./images/icons.svg"#></use>
-                </svg>
-              </div>
-
-               <label class="modal-form-label" for="user_mail">Пошта</label>
-              <div class="modal-form-wrapper">
-                <input class="modal-form-field" type="mail" name="user_mail" id="user_mail">
-                <svg class="modal-form-icon" width="18" height="18">
-                  <use href="./images/icons.svg"#></use>
-                </svg>
-              </div>
-              <label class="modal-form-label" for="user_message">Коментар</label>
-              <textarea class="modal-form-message" 
-              name="user_message" 
-              id="user_message"               
-              rows="6">
+            <label class="modal-form-label" for="user_mail">Пошта</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-field"
+                type="email"
+                name="user_mail"
+                id="user_mail"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#emailblack"></use>
+              </svg>
+            </div>
+            <label class="modal-form-label" for="user_message">Коментар</label>
+            <textarea
+              class="modal-form-message"
+              name="user_message"
+              id="user_message"
+              rows="6"
+              placeholder="Введіть текст"
+            >
             </textarea>
-            </div>
-            <div class="modal-form-group" role="group">
-              <input class="modal-form-checkbox" type="checkbox" name="" id="user_agreement">
-              <label for="user_agreement">Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a> </label>
-            </div>
-            <button class="modal-form-btn" type="submit">Відправити</button>
-
-
-
-
-
-
-          </form>
-
-
-
+          </div>
+          <div class="modal-form-agreement" role="group">
+            <input
+              class="modal-form-checkbox"
+              type="checkbox"
+              name="user_agreement"
+              id="user_agreement"
+              required
+            />
+            <label class="modal-form-label-agreement" for="user_agreement"
+              >Погоджуюся з розсилкою та приймаю
+              <a class="modal-form-link" href="">Умови договору</a>
+            </label>
+          </div>
+          <button class="modal-form-btn" type="submit">Відправити</button>
         </form>
       </div>
     </div>
