завершение 6 работы с формами

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="hero-section overlay">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-btn button" type="button" data-modal-open>Замовити послугу</button>
+          <button class="hero-btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
 
@@ -515,12 +515,9 @@
             </div>
             <label class="modal-form-label" for="user_message">Коментар</label>
             <textarea
-              class="modal-form-message"
-              name="user_message"
-              id="user_message"
-              rows="6"
-              placeholder="Введіть текст"
-            >
+              class="modal-form-message" name="user_message"
+              id="user_message" rows="5" 
+              placeholder="Введіть текст">                          
             </textarea>
           </div>
           <div class="modal-form-agreement" role="group">
