--- a/index.html
+++ b/index.html
@@ -515,9 +515,12 @@
             </div>
             <label class="modal-form-label" for="user_message">Коментар</label>
             <textarea
-              class="modal-form-message" name="user_message"
-              id="user_message" rows="5" 
-              placeholder="Введіть текст">                          
+              class="modal-form-message"
+              name="user_message"
+              id="user_message"
+              rows="5"
+              placeholder="Введіть текст"
+            >
             </textarea>
           </div>
           <div class="modal-form-agreement" role="group">
