--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
                 placeholder="john dou"
                 required
                 minlength="3"
+                autocomplete="off"
               />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#person-black"></use>
@@ -494,6 +495,7 @@
                 name="user_phone"
                 id="user_phone"
                 required
+                autocomplete="off"
               />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#phoneblack"></use>
@@ -508,6 +510,7 @@
                 name="user_mail"
                 id="user_mail"
                 required
+                autocomplete="off"
               />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#emailblack"></use>
@@ -520,8 +523,7 @@
               id="user_message"
               rows="6"
               placeholder="Введіть текст"
-            >
-            </textarea>
+            ></textarea>
           </div>
           <div class="modal-form-agreement" role="group">
             <input
